.vitepress/theme/styles.css
:root {
	--faithful-brand: #76c945;
	--secondary-brand: #00a2ff;
	--vp-c-brand-1: var(--faithful-brand);
	--vp-c-brand-2: #22a831;
	--vp-home-hero-name-color: var(--vp-c-text-1);
	--vp-home-hero-image-background-image: linear-gradient(45deg, #76c94555 50%, #00a2ff55 50%);
	--vp-home-hero-image-filter: blur(44px);

	--vp-sidebar-width: 300px;

	/* light is treated as "default" */
	--vp-c-brand-soft: #efffe6;
	scrollbar-color: #76c945 #ffffffbb;
}

.dark {
	--vp-c-brand-soft: #2d4022;
	scrollbar-color: #76c945 #191919bb;
}

.center {
	text-align: center !important;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

/* fix captions slightly clipping into images */
i.center {
	margin-top: 10px;
}

/* colored text */
.red-text {
	color: #f44336;
}

/* lists */
.lettered > li {
	list-style-type: lower-alpha;
}

.roman > li {
	list-style-type: upper-roman;
}

/** scrollbar stuff */

/* firefox */
* {
	scrollbar-width: auto;
}

/* Chrome, Edge, and Safari */
html::-webkit-scrollbar, html *::-webkit-scrollbar {
	width: 12px;
}

html::-webkit-scrollbar-track, html *::-webkit-scrollbar-track {
	background: #191919bb;
}

html::-webkit-scrollbar-thumb, html *::-webkit-scrollbar-thumb {
	background-color: #76c945;
	border-radius: 12px;
	border: -1px solid #76c945;
}

/* home page */
.colorful {
	background: -webkit-linear-gradient(115deg, var(--faithful-brand) 30%, var(--secondary-brand));
	background-clip: text;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

/* vertically center hero image (pain) */
.image-container > * {
	margin-top: 2em;
}

/* bigger blur for bigger screens */
@media (min-width: 640px) {
	:root {
		--vp-home-hero-image-filter: blur(56px);
	}
}

@media (min-width: 960px) {
	:root {
		--vp-home-hero-image-filter: blur(68px);
	}
}

